added ask scout
